--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -62,7 +62,7 @@
         <value>False</value>
       </setting>
       <setting name="AccountsPath" serializeAs="String">
-        <value>..\..\AccountsConfig\Accounts.xml</value>
+        <value>..\..\UIServiceData\Accounts.xml</value>
       </setting>
       <setting name="ClampIsVisible" serializeAs="String">
         <value>True</value>
@@ -110,7 +110,7 @@
         <value>Profile</value>
       </setting>
       <setting name="Localization" serializeAs="String">
-        <value>en-EN</value>
+        <value>ru-RU</value>
       </setting>
       <setting name="SpecialMeasureForUse" serializeAs="String">
         <value>True</value>
@@ -212,10 +212,10 @@
         <value>synchronous=Full;journal mode=Truncate;failifmissing=True</value>
       </setting>
       <setting name="LogsDatabasePath" serializeAs="String">
-        <value>Db\SCME_LogsDB.sqlite</value>
+        <value>..\UIServiceData\SCME_LogsDB.sqlite</value>
       </setting>
       <setting name="ResultsDatabasePath" serializeAs="String">
-        <value>Db\SCME_ResultsDB_Local.sqlite</value>
+        <value>..\UIServiceData\SCME_ResultsDB_Local.sqlite</value>
       </setting>
       <setting name="SctuEmulation" serializeAs="String">
         <value>True</value>
@@ -293,7 +293,7 @@
         <value>False</value>
       </setting>
       <setting name="MMECode" serializeAs="String">
-        <value>MME009</value>
+        <value>A</value>
       </setting>
       <setting name="DebugUpdate" serializeAs="String">
         <value>True</value>
