--- a/SCME.InterfaceImplementations/SCME.InterfaceImplementations.csproj
+++ b/SCME.InterfaceImplementations/SCME.InterfaceImplementations.csproj
@@ -21,4 +21,16 @@
     <ProjectReference Include="..\SCME.Types\SCME.Types.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="publish\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="publish\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="publish\**" />
+  </ItemGroup>
+
 </Project>
