bug fix update system , add compatible with old version

--- a/SCME.UpdateServer/appsettings.json
+++ b/SCME.UpdateServer/appsettings.json
@@ -10,17 +10,15 @@
   "HostUrl": "http://127.0.0.1:731",
   "UpdateDataConfig": {
     "DebugParameter": "2",
-    "DataPathRoot": "d:\\data",
+    "DataPathRoot": "e:\\data",
     "ScmeAgentFolderName": "SCME.Agent",
     "ScmeAgentExeName": "SCME.Agent.exe",
-    "ScmeServiceConfigName": "SCME.Service.exe.config",
-    "ScmeUiConfigName": "SCME.UI.exe.config",
     "ScmeCommonConfigName": "SCME.UIServiceConfig.dll.config",
     "ScmeUIExeName": "UI\\SCME.UI.exe",
     "MmeParameters": [
       {
         "Name": "MME007",
-        "Folder": "UIService_3.1.7390.29156",
+        "Folder": "2",
         "Configs": {
           "GateIsVisible": "True",
           "TechPassword": "1234",
