debug config changes for fork branches : develop, release

--- a/SCME.DatabaseServer/App.config
+++ b/SCME.DatabaseServer/App.config
@@ -1,78 +1,77 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="SCME.DatabaseServer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </sectionGroup>
-  </configSections>
-  <system.serviceModel>
-    <bindings>
-      <netTcpBinding>
-        <binding name="DefaultTcpBinding" receiveTimeout="00:25:00" sendTimeout="00:25:00" maxReceivedMessageSize="2147483647" maxBufferPoolSize="2147483647" maxBufferSize="2147483647" maxConnections="100">
-          <security mode="None">
-            <transport clientCredentialType="None" />
-            <message clientCredentialType="None" />
-          </security>
-        </binding>
-      </netTcpBinding>
-    </bindings>
-    <protocolMapping>
-      <remove scheme="net.tcp" />
-      <add scheme="net.tcp" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" />
-    </protocolMapping>
-    <behaviors>
-      <endpointBehaviors>
-        <behavior name="DefaultClientEndpointBehavior">
-          <callbackDebug includeExceptionDetailInFaults="true" />
-          <dataContractSerializer maxItemsInObjectGraph="2147483647" />
-        </behavior>
-      </endpointBehaviors>
-    </behaviors>
-    <services>
-      <service name="SCME.InterfaceImplementations.SQLCentralDatabaseService">
-        <endpoint address="net.tcp://127.0.0.1:730/SCME/SCME.IO.CentralDatabaseService" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" name="SCME.CentralDatabaseService" bindingNamespace="" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" />
-      </service>
-      <service name="SCME.InterfaceImplementations.NewImplement.MSSQL.MSSQLDbService">
-        <endpoint address="net.tcp://127.0.0.1:730/SCME/CentralDatabase" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" name="CentralDatabase" contract="SCME.Types.Database.IDbService"/>
-      </service>
-    </services>
-  </system.serviceModel>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-  </startup>
-
-  <applicationSettings>
-    <SCME.DatabaseServer.Properties.Settings>
-      <setting name="DBIntegratedSecurity" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="DBPassword" serializeAs="String">
-        <value>qwerty_123</value>
-      </setting>
-      <setting name="LogPathTemplate" serializeAs="String">
-        <value>Logs\DatabaseServer_{0}.log</value>
-      </setting>
-      <setting name="DbPath" serializeAs="String">
-        <value>IVAN-PC\SQLEXPRESS01</value>
-      </setting>
-      <setting name="DBUser" serializeAs="String">
-        <value>sa</value>
-      </setting>
-      <setting name="DBName" serializeAs="String">
-        <value>SCME_ResultsDB</value>
-      </setting>
-    </SCME.DatabaseServer.Properties.Settings>
-  </applicationSettings>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Runtime.InteropServices.RuntimeInformation" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="SCME.DatabaseServer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <system.serviceModel>
+        <bindings>
+            <netTcpBinding>
+                <binding name="DefaultTcpBinding" receiveTimeout="00:25:00" sendTimeout="00:25:00" maxReceivedMessageSize="2147483647" maxBufferPoolSize="2147483647" maxBufferSize="2147483647" maxConnections="100">
+                    <security mode="None">
+                        <transport clientCredentialType="None" />
+                        <message clientCredentialType="None" />
+                    </security>
+                </binding>
+            </netTcpBinding>
+        </bindings>
+        <protocolMapping>
+            <remove scheme="net.tcp" />
+            <add scheme="net.tcp" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" />
+        </protocolMapping>
+        <behaviors>
+            <endpointBehaviors>
+                <behavior name="DefaultClientEndpointBehavior">
+                    <callbackDebug includeExceptionDetailInFaults="true" />
+                    <dataContractSerializer maxItemsInObjectGraph="2147483647" />
+                </behavior>
+            </endpointBehaviors>
+        </behaviors>
+        <services>
+            <service name="SCME.InterfaceImplementations.SQLCentralDatabaseService">
+                <endpoint address="net.tcp://127.0.0.1:730/SCME/SCME.IO.CentralDatabaseService" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" name="SCME.CentralDatabaseService" bindingNamespace="" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" />
+            </service>
+            <service name="SCME.InterfaceImplementations.NewImplement.MSSQL.MSSQLDbService">
+                <endpoint address="net.tcp://127.0.0.1:730/SCME/CentralDatabase" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" name="CentralDatabase" contract="SCME.Types.Database.IDbService" />
+            </service>
+        </services>
+    </system.serviceModel>
+    <startup>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+    </startup>
+    <applicationSettings>
+        <SCME.DatabaseServer.Properties.Settings>
+            <setting name="DBIntegratedSecurity" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DBPassword" serializeAs="String">
+                <value>qwerty_123</value>
+            </setting>
+            <setting name="LogPathTemplate" serializeAs="String">
+                <value>Logs\DatabaseServer_{0}.log</value>
+            </setting>
+            <setting name="DbPath" serializeAs="String">
+                <value>IVAN-PC\SQLEXPRESS</value>
+            </setting>
+            <setting name="DBUser" serializeAs="String">
+                <value>sa</value>
+            </setting>
+            <setting name="DBName" serializeAs="String">
+                <value>SCME_ResultsDB</value>
+            </setting>
+        </SCME.DatabaseServer.Properties.Settings>
+    </applicationSettings>
+    <runtime>
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <dependentAssembly>
+                <assemblyIdentity name="System.Runtime.InteropServices.RuntimeInformation" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+            </dependentAssembly>
+        </assemblyBinding>
+    </runtime>
 </configuration>
