--- a/SCME.UIServiceConfig/SCME.UIServiceConfig.csproj
+++ b/SCME.UIServiceConfig/SCME.UIServiceConfig.csproj
@@ -32,4 +32,9 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="App.config" />
+    <Content Include="App.config" />
+  </ItemGroup>
+
 </Project>
