--- a/SCME.DatabaseServer/Properties/Settings.settings
+++ b/SCME.DatabaseServer/Properties/Settings.settings
@@ -12,7 +12,7 @@
       <Value Profile="(Default)">Logs\DatabaseServer_{0}.log</Value>
     </Setting>
     <Setting Name="DbPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">IVAN-PC\SQLEXPRESS01</Value>
+      <Value Profile="(Default)">IVAN-PC\SQLEXPRESS</Value>
     </Setting>
     <Setting Name="DBUser" Type="System.String" Scope="Application">
       <Value Profile="(Default)">sa</Value>
