--- a/SCME.ProfileBuilder/Properties/Settings.settings
+++ b/SCME.ProfileBuilder/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)">ru-RU</Value>
     </Setting>
     <Setting Name="MSSQLServer" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">IVAN-PC\SQLEXPRESS01</Value>
+      <Value Profile="(Default)">IVAN-PC\SQLEXPRESS</Value>
     </Setting>
     <Setting Name="MSSQLIntegratedSecurity" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
