--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -298,7 +298,7 @@
                 <value>False</value>
             </setting>
             <setting name="MMECode" serializeAs="String">
-                <value>MME008</value>
+                <value>A</value>
             </setting>
             <setting name="DebugUpdate" serializeAs="String">
                 <value>True</value>
