repair work config for release branch

--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -173,7 +173,7 @@
                 <value>True</value>
             </setting>
             <setting name="IsLocal" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="DisableLogDB" serializeAs="String">
                 <value>False</value>
@@ -293,7 +293,7 @@
                 <value>False</value>
             </setting>
             <setting name="MMECode" serializeAs="String">
-                <value>A</value>
+                <value>MME013</value>
             </setting>
             <setting name="DebugUpdate" serializeAs="String">
                 <value>True</value>
