--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -1,12 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="SCME.UIServiceConfig.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-            <section name="SCME.UIServiceConfig.Properties.Settings1" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="SCME.UIServiceConfig.Properties.Settings1" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <applicationSettings>
@@ -33,8 +29,7 @@
                 <value>False</value>
             </setting>
             <setting name="TechPassword" serializeAs="String">
-                <value>
-                </value>
+                <value ></value>
             </setting>
             <setting name="PlotUserSL" serializeAs="String">
                 <value>False</value>
@@ -298,7 +293,7 @@
                 <value>False</value>
             </setting>
             <setting name="MMECode" serializeAs="String">
-                <value>MME008</value>
+                <value>A</value>
             </setting>
             <setting name="DebugUpdate" serializeAs="String">
                 <value>True</value>
@@ -306,330 +301,15 @@
             <setting name="DatabaseService" serializeAs="String">
                 <Value>net.tcp://127.0.0.1:800/SCME/SCME.IO.DatabaseService</Value>
             </setting>
-            <setting name="LocalDatabase" serializeAs="String">
+            <setting name="LocalDatabase" serializeAs="String" >
                 <Value>net.tcp://127.0.0.1:800/SCME/LocalDatabase</Value>
             </setting>
-            <setting name="CentralDatabaseService" serializeAs="String">
+            <setting name="CentralDatabaseService" serializeAs="String" >
                 <Value>net.tcp://127.0.0.1:730/SCME/SCME.IO.CentralDatabaseService</Value>
             </setting>
-            <setting name="CentralDatabase" serializeAs="String">
+            <setting name="CentralDatabase" serializeAs="String" >
                 <Value>net.tcp://127.0.0.1:730/SCME/CentralDatabase</Value>
             </setting>
         </SCME.UIServiceConfig.Properties.Settings>
-        <SCME.UIServiceConfig.Properties.Settings1>
-            <setting name="GateIsVisible" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="SLIsVisible" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="BvtIsVisible" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="CommIsVisible" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ExitButtonIsVisible" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ScrollBarButtonIsVisible" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="IsAnimationEnabled" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="TechPassword" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="PlotUserSL" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="PlotUserGate" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="PlotUserBVT" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="IsTechPasswordEnabled" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="KeyboardsPath" serializeAs="String">
-                <value>KeyboardLayouts\Keyboards.xml</value>
-            </setting>
-            <setting name="BVTVoltageFrequency" serializeAs="String">
-                <value>50</value>
-            </setting>
-            <setting name="SinglePositionModuleMode" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="CommExIsVisible" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="IgnoreSC" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="RunExplorer" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="AccountsPath" serializeAs="String">
-                <value>..\..\UIServiceData\Accounts.xml</value>
-            </setting>
-            <setting name="ClampIsVisible" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="NormalWindow" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="UseVTMPostProcessing" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="StoragePath" serializeAs="String">
-                <value>LocalStorage\Storage.xml</value>
-            </setting>
-            <setting name="dVdtIsVisible" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="IsHeighMeasureEnable" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ClampWithSlidingDevice" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ATUIsVisible" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="QrrTqIsVisible" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="PlotUserQrrTq" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="RACIsVisible" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="IHIsVisible" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="TOUIsVisible" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="WindowIs1280x1024" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="DUTType" serializeAs="String">
-                <value>Profile</value>
-            </setting>
-            <setting name="Localization" serializeAs="String">
-                <value>en-EN</value>
-            </setting>
-            <setting name="SpecialMeasureForUse" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="OperatorBuildModeIsEnabled" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="GateNode" serializeAs="String">
-                <value>3</value>
-            </setting>
-            <setting name="SLNode" serializeAs="String">
-                <value>2</value>
-            </setting>
-            <setting name="BVTNode" serializeAs="String">
-                <value>4</value>
-            </setting>
-            <setting name="CommutationNode" serializeAs="String">
-                <value>1</value>
-            </setting>
-            <setting name="AdapterPort" serializeAs="String">
-                <value>3</value>
-            </setting>
-            <setting name="GatewayNode" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="IsCommutationType6" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="CommutationExNode" serializeAs="String">
-                <value>5</value>
-            </setting>
-            <setting name="CommutationExEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="IsCommutationExType6" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ClampingSystemEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ClampingSystemNode" serializeAs="String">
-                <value>6</value>
-            </setting>
-            <setting name="IsClampingSystemConnected" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="DBOptionsLogs" serializeAs="String">
-                <value>synchronous=Full;failifmissing=True;</value>
-            </setting>
-            <setting name="IncludeDetailsInLog" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="GateReadGraph" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="SLReadGraph" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="BVTReadGraph" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="IsLocal" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="DisableLogDB" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="CommutationEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="GatewayEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="AdapterEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="BVTEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="GateEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="SLEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="LogsTracePathTemplate" serializeAs="String">
-                <value>Logs\LogsService {0}.log</value>
-            </setting>
-            <setting name="DBServiceExternalEndpoint" serializeAs="String">
-                <value>net.tcp://127.0.0.1:801/SCME/SCME.IO.DatabaseService</value>
-            </setting>
-            <setting name="dVdtNode" serializeAs="String">
-                <value>6</value>
-            </setting>
-            <setting name="dVdtEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="DBOptionsResults" serializeAs="String">
-                <value>synchronous=Full;journal mode=Truncate;failifmissing=True</value>
-            </setting>
-            <setting name="LogsDatabasePath" serializeAs="String">
-                <value>Db\SCME_LogsDB.sqlite</value>
-            </setting>
-            <setting name="ResultsDatabasePath" serializeAs="String">
-                <value>Db\SCME_ResultsDB_Local.sqlite</value>
-            </setting>
-            <setting name="SctuEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="SctuNode" serializeAs="String">
-                <value>8</value>
-            </setting>
-            <setting name="ForceLogFlush" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="MaintenanceServiceExternalEndpoint" serializeAs="String">
-                <value>net.tcp://127.0.0.1:800/SCME/SCME.IO.MaintenanceService</value>
-            </setting>
-            <setting name="ATUEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ATUNode" serializeAs="String">
-                <value>9</value>
-            </setting>
-            <setting name="SafetyType" serializeAs="String">
-                <value>Optical</value>
-            </setting>
-            <setting name="DefaultForce" serializeAs="String">
-                <value>5</value>
-            </setting>
-            <setting name="LongTimeForce" serializeAs="String">
-                <value>50</value>
-            </setting>
-            <setting name="ThisControlUnitBoardNode" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="AnotherControlUnitBoardNode" serializeAs="String">
-                <value>9</value>
-            </setting>
-            <setting name="SCTUReadGraph" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="UseAnotherControlUnitBoard" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="NeedSCTUInitialization" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="QrrTqNode" serializeAs="String">
-                <value>10</value>
-            </setting>
-            <setting name="QrrTqEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="QrrTqReadGraf" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="RACNode" serializeAs="String">
-                <value>4</value>
-            </setting>
-            <setting name="RACEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="IHEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="RCCEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="TOUEmulation" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="TOUNode" serializeAs="String">
-                <value>11</value>
-            </setting>
-            <setting name="IsWriteSafetyRegister" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="AlarmEmulation" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="MMECode" serializeAs="String">
-                <value>MME008</value>
-            </setting>
-            <setting name="DebugUpdate" serializeAs="String">
-                <value>True</value>
-            </setting>
-        </SCME.UIServiceConfig.Properties.Settings1>
     </applicationSettings>
-    <userSettings>
-        <SCME.UIServiceConfig.Properties.Settings1>
-            <setting name="ReadOnlyProfiles" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ControlService" serializeAs="String">
-                <value>net.tcp://127.0.0.1:800/SCME/SCME.IO.ControlService</value>
-            </setting>
-            <setting name="DatabaseService" serializeAs="String">
-                <value>net.tcp://127.0.0.1:800/SCME/SCME.IO.DatabaseService</value>
-            </setting>
-            <setting name="LocalDatabase" serializeAs="String">
-                <value>net.tcp://127.0.0.1:800/SCME/LocalDatabase</value>
-            </setting>
-            <setting name="CentralDatabaseService" serializeAs="String">
-                <value>net.tcp://127.0.0.1:730/SCME/SCME.IO.CentralDatabaseService</value>
-            </setting>
-            <setting name="CentralDatabase" serializeAs="String">
-                <value>net.tcp://127.0.0.1:730/SCME/CentralDatabase</value>
-            </setting>
-        </SCME.UIServiceConfig.Properties.Settings1>
-    </userSettings>
 </configuration>
