--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -173,7 +173,7 @@
                 <value>True</value>
             </setting>
             <setting name="IsLocal" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="DisableLogDB" serializeAs="String">
                 <value>False</value>
