Отключил не используемые блоки в настройках

--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -11,10 +11,10 @@
                 <value>False</value>
             </setting>
             <setting name="SLIsVisible" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="BvtIsVisible" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="CommIsVisible" serializeAs="String">
                 <value>True</value>
@@ -65,7 +65,7 @@
                 <value>..\..\UIServiceData\Accounts.xml</value>
             </setting>
             <setting name="ClampIsVisible" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="NormalWindow" serializeAs="String">
                 <value>False</value>
@@ -77,7 +77,7 @@
                 <value>LocalStorage\Storage.xml</value>
             </setting>
             <setting name="dVdtIsVisible" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="IsHeighMeasureEnable" serializeAs="String">
                 <value>True</value>
@@ -86,22 +86,22 @@
                 <value>True</value>
             </setting>
             <setting name="ATUIsVisible" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="QrrTqIsVisible" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="PlotUserQrrTq" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="RACIsVisible" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="IHIsVisible" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="TOUIsVisible" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="WindowIs1280x1024" serializeAs="String">
                 <value>True</value>
