--- a/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
+++ b/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
@@ -48,6 +48,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="DataTemplates\TestParameters\OutputResidualVoltage.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="Styles\ScrollBar.xaml">
       <SubType>Designer</SubType>
     </Page>
