--- a/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
+++ b/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
@@ -57,6 +57,9 @@
     <Page Update="DataTemplates\TestParameters\OutputResidualVoltage.xaml">
       <SubType>Designer</SubType>
     </Page>
+    <Page Update="Styles\ImpulsePageStyle.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="Styles\ScrollBar.xaml">
       <SubType>Designer</SubType>
     </Page>
